--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "body-parser": "^1.20.2",
+    "connect": "^3.7.0",
     "cors": "^2.8.5",
     "express": "^4.18.2"
   },
